# visualbondweb

./: Dockerfile  README.md  api_main.py  pyproject.toml  render.yaml  requirements.txt
static/: index.html
visualbondweb/: __init__.py  __main__.py  api.py
visualbondweb/static/: help.html  index.html
